@@ -122,6 +122,7 @@ export(sar)
 export(se.news)
 export(separability)
 export(sf.kde)
+export(sf_dissolve)
 export(sg.smooth)
 export(shannons)
 export(shift)
@@ -134,6 +135,7 @@ export(sp.na.omit)
 export(spatial.select)
 export(spectral.separability)
 export(spherical.sd)
+export(squareBuffer)
 export(srr)
 export(stratified.random)
 export(subsample.distance)
